# minimal-reproducer-cabal-sublib-haskell-nix

./: cabal.project.old  flake.nix
bla/: CHANGELOG.md  bla.cabal
blup/: CHANGELOG.md  blup.cabal
