cabal-version:      3.4
name:               bla
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mangoiv
maintainer:         mail@mangoiv.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library 
    exposed-modules: Main
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

library blabla 
    visibility: public
    exposed-modules: BlaBla
    hs-source-dirs:   src
    build-depends:    base
